test_regress/t/t_pp_pragma_bad.out
%Error: t/t_pp_pragma_bad.v:6: `pragma is missing a pragma_expression.
`pragma
^~~~~~~
%Error: Exiting due to
